View Contact State

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -10,6 +10,12 @@
             <button class="button" ng-click="saveAddress('Hi')">Save</button>
             <button id="pickContact">Pick Contact</button>
             <div id="selectedContact"></div>
+            <a menu-close href="#/app/design" class="item item-icon-left">
+                <i class="icon ion-android-attach"></i> Design Options
+            </a>
+            <a menu-close href="#/app/contact" class="item item-icon-left">
+                <i class="icon ion-android-attach"></i> Contact Options
+            </a>
         </ion-content>
     </ion-pane>
 </ion-view>
